fixed sizing issues on small devices

--- a/Animation/css/bumbles.css
+++ b/Animation/css/bumbles.css
@@ -153,13 +153,13 @@ p {
     }
 
     .cta {
-        height: 40vw;
-        width: 40vw;
+        height: 35vw;
+        width: 35vw;
         font-size: 3vw;
     }
 }
 
-@media only screen and (min-width: 250px) {
+@media only screen and (min-width: 280px) {
 
 	main {
         display: flex;
